<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true" >

<LinearLayout 
    android:background="@color/backgroundIWant"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">
    
    <LinearLayout 
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="2.37"
            android:src="@drawable/decoration" />

        <TextView 
            android:text="Hey there! Welcome to Math Blitz!"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textSize="22dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.5">
    	<LinearLayout
    	    android:orientation="vertical"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:layout_weight="1">
    	</LinearLayout>
    	
   		<LinearLayout
   		    android:orientation="vertical"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:layout_weight="3">
    	   
    
    	   <LinearLayout
    	       android:id="@+id/button_menu"
    	       android:orientation="vertical"
    	       android:layout_height="match_parent"
    	       android:layout_width="match_parent"
    	       android:gravity="center">
    	       <Button 
    	           android:id="@+id/button_play"
    	           android:layout_width="match_parent"
    	           android:layout_height="45dp"
    	           android:background="@color/button_back"
    	           android:text="@string/text_play"
    	           android:textColor="@color/White"
    	           android:textSize="26dp"
    	           />
    	       <View 
    	           android:layout_width="match_parent"
    	           android:layout_height="5dp">
    	       </View>
    	       <Button 
    	           android:id="@+id/button_instructions"
    	           android:layout_width="match_parent"
    	           android:layout_height="45dp"
    	           android:background="@color/button_back"
    	           android:text="@string/text_instructions"
    	           android:textColor="@color/White"
    	           android:textSize="26dp"
    	           />
    	       <View 
    	           android:layout_width="match_parent"
    	           android:layout_height="5dp">
    	       </View>
    	       <Button 
    	           android:id="@+id/button_highscore"
    	           android:layout_width="match_parent"
    	           android:layout_height="45dp"
    	           android:background="@color/button_back"
    	           android:text="@string/text_highscore"
    	           android:textColor="@color/White"
    	           android:textSize="26dp"
    	           />
    	   </LinearLayout> 
    	   
     	  
    	   		    
    	</LinearLayout>   
       
       	<LinearLayout
    	    android:orientation="vertical"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:layout_weight="1">
    	</LinearLayout>   
    
    </LinearLayout>
   
    
</LinearLayout>
</ScrollView>
